custom errors; fix tests
