# internal/delivery/httpserver/v1/orderProducts.go
@@ -16,46 +16,47 @@ import (
 // @Accept  json
 // @Produce  json
 // @Param input body entity.Order true "order data"
+// @Param id path string true "Order ID"
 // @Success 200 {string} string "id"
 // @Failure 400,403,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /orders/:id/products [post]
+// @Router /orders/{id}/products [post]
 func (ctrl *Controller) addOrderProduct(c *gin.Context) {
 	var input entity.OrderProduct
 
 	if err := c.BindJSON(&input); err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
+		newErrorResponse(c, newJSONBindingErrorWrapper(err))
 		return
 	}
 
 	userId, err := getUserId(c)
 	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
 	uc := order.NewOrderUseCase(ctrl.repos.Orders)
 	o, err := uc.GetByID(input.OrderID)
 	if err != nil {
-		newErrorResponse(c, http.StatusNotFound, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
 	if o.UserID != userId {
-		newErrorResponse(c, http.StatusForbidden, err.Error())
+		newErrorResponse(c, forbiddenError)
 		return
 	}
 
 	puc := product.NewProductUseCase(ctrl.repos.Products)
 	p, err := puc.GetByID(input.ProductID)
 	if err != nil {
-		newErrorResponse(c, http.StatusNotFound, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
-	if err := uc.AddProduct(p, &input); err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+	if err = uc.AddProduct(p, &input); err != nil {
+		newErrorResponse(c, err)
 		return
 	}
 
@@ -69,35 +70,40 @@ func (ctrl *Controller) addOrderProduct(c *gin.Context) {
 // @ID order-products-get-all
 // @Accept  json
 // @Produce  json
+// @Param id path string true "Order ID"
 // @Success 200 {object} dataResponse
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /orders/:id/products [get]
+// @Router /orders/{id}/products [get]
 func (ctrl *Controller) getAllOrderProducts(c *gin.Context) {
-	userId, err := getUserId(c)
-	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+	id := c.Param("id")
+	if id == "" {
+		newErrorResponse(c, emptyParameterID)
 		return
 	}
 
-	id := c.Param("id")
+	userId, err := getUserId(c)
+	if err != nil {
+		newErrorResponse(c, err)
+		return
+	}
 
 	uc := order.NewOrderUseCase(ctrl.repos.Orders)
 	o, err := uc.GetByID(id)
 	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
 	if o.UserID != userId {
-		newErrorResponse(c, http.StatusForbidden, err.Error())
+		newErrorResponse(c, forbiddenError)
 		return
 	}
 
 	orders, err := uc.GetAllOrderProducts(o.ID)
 	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
@@ -111,36 +117,42 @@ func (ctrl *Controller) getAllOrderProducts(c *gin.Context) {
 // @ID order-product-delete
 // @Accept  json
 // @Produce  json
+// @Param id path string true "Order ID"
+// @Param productID path string true "Product ID"
 // @Success 200 {object} statusResponse
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /orders/:id/products/:productID [delete]
+// @Router /orders/{id}/products/{productID} [delete]
 func (ctrl *Controller) deleteOrderProduct(c *gin.Context) {
-	userId, err := getUserId(c)
-	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+	id := c.Param("id")
+	productID := c.Param("productID")
+	if id == "" || productID == "" {
+		newErrorResponse(c, emptyParameterID)
 		return
 	}
 
-	id := c.Param("id")
-	productID := c.Param("productID")
+	userId, err := getUserId(c)
+	if err != nil {
+		newErrorResponse(c, err)
+		return
+	}
 
 	uc := order.NewOrderUseCase(ctrl.repos.Orders)
 
 	o, err := uc.GetByID(id)
 	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
 	if o.UserID != userId {
-		newErrorResponse(c, http.StatusForbidden, err.Error())
+		newErrorResponse(c, forbiddenError)
 		return
 	}
 
 	if err := uc.RemoveProduct(id, productID); err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		newErrorResponse(c, err)
 		return
 	}
 
